# esp32c3-examples

./: .gitignore
home-app/: Cargo.toml  features.txt
home-app/src/: main.rs  window.rs
home-app/src/data/: app_data.rs  mod.rs
home-app/src/data/storage/: file_storage.rs  mod.rs  persistence.rs  storage.rs
home-app/src/resource/: defines.rs  error.rs  fonts.rs  icons.rs  mod.rs  theme.rs  window_event.rs
home-app/src/resource/config/: rumqttd.conf
home-app/src/service/: mod.rs  mqtt_client.rs  mqtt_server.rs
home-app/src/system/: mod.rs  persistence.rs  setup_system.rs  ui_system.rs  window_event_system.rs
home-app/src/ui/: device_page.rs  mod.rs  titlebar.rs  ui_state.rs
lvgl-example/: .gitignore
modbus-rtu-example/: CMakeLists.txt  README.md  sdkconfig.defaults
modbus-rtu-example/main/: CMakeLists.txt  Kconfig.projbuild  led_strip_rmt_ws2812.c  modbus_params.c  modbus_params.h  modbus_rtu_example_main.c
