[package]
name = "home-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epi = { version = "0.17", features = ["persistence", "file_storage"] }
egui_extras = { version = "0.17.0", features = ["image", "svg"] }
egui-winit = { version = "0.17.0", features = ["epi"] }
egui_wgpu_backend = "0.17"
wgpu = "0.12"
winit = "0.26.1"
image = "0.24.1"
pollster = "0.2.5"
spin_sleep = "1.1.0"
thiserror = "1.0.30"
serde = { version = "1.0.133", features = ["derive"] }
serde_json = "1.0.75"
rumqttc = "0.11.0"
rumqttd = { version = "0.10.0", default-features = false }
confy = "0.4.0"
parking_lot = "0.12.0"
tracing = "0.1.32"
tracing-subscriber = "0.3.10"

[profile.release]
opt-level = 2
strip = true
